--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <div class="col-sm-12 col-md-6">
                         <div class="mh-about-inner">
                             <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">About Me</h2>
-                            <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Hello, I’m Evance Odhiambo, a certified Software Engineer, Data Scientist, and Computer Science Trainer. With a Bachelor's degree in Electrical/Electronics and Computing Technology, I bring a diverse skill set in software development, data analysis, and digital skills training. I specialize in creating innovative software solutions, leveraging data for impactful insights, and training individuals in digital skills.</p>
+                            <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Hello, I’m Evance Odhiambo, a certified Software Engineer, Data Scientist, and Computer Science Trainer. With a Bachelor's degree in Electrical/Electronics and Computing Technology, I bring a diverse skill set in software development, data analysis, Cloud Solutions, and digital skills training. I specialize in creating innovative software solutions, leveraging data for impactful insights, and training individuals in digital skills.</p>
                             <div class="mh-about-tag wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                                 <ul>
                                     <li><span>Python</span></li>
