--- a/index.html
+++ b/index.html
@@ -388,12 +388,16 @@
                                 <div class="mh-experience-deatils">
                                     <!-- Education Institutes-->
                                     <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">
-                                        <h4>UI/UX Designer <a href="#">IronSketch</a></h4>
-                                        <div class="mh-eduyear">2005-2008</div>
+                                        <h4>Computer Science Lecturer <a href="#">Intel College</a></h4>
+                                        <div class="mh-eduyear">2019-2023</div>
+                                        <p>At Intel College, I taught Higher National Diploma students in Computer Science, guiding them through a curriculum aligned with the University of Sunderland's standards. I played a pivotal role in preparing students for careers in technology by fostering a collaborative learning environment and ensuring they gained practical experience alongside theoretical knowledge.</p>
                                         <span>Responsibility :</span>
                                         <ul class="work-responsibility">
-                                            <li><i class="fa fa-circle"></i>Validate CSS</li>
-                                            <li><i class="fa fa-circle"></i>Project Management</li>
+                                            <li><i class="fa fa-circle"></i>Delivered lectures on core Computer Science subjects such as programming, Cloud Computing, and database management.</li>
+                                            <li><i class="fa fa-circle"></i>Developed and updated course materials to ensure relevance to industry standards.</li>
+                                            <li><i class="fa fa-circle"></i>Mentored and guided students on academic and career development.</li>
+                                            <li><i class="fa fa-circle"></i>Supervised student projects, ensuring practical application of learned concepts.</li>
+                                            <li><i class="fa fa-circle"></i>Assessed student performance through exams, assignments, and practical evaluations.</li>
                                         </ul>
                                     </div>                                
                                     <!-- Education Institutes-->
