--- a/index.html
+++ b/index.html
@@ -379,6 +379,16 @@
                                         <div class="mh-eduyear">May 2023 - August 2024</div>
                                         <p>Completed an extensive certification program focused on mastering data science principles and techniques. The program covered key areas such as data analysis, machine learning, data visualization, and statistical modeling. Through hands-on projects, I gained proficiency in Python, SQL, and various data analysis libraries like Pandas, NumPy, and Scikit-learn. The certification also involved working with real-world datasets, developing predictive models, and deriving actionable insights to solve complex data-driven problems. This program enhanced my ability to turn raw data into meaningful information, driving informed decision-making in diverse fields.</p>
                                     </div>
+                                    <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
+                                        <h4>SEO Certification <a href="#">HubSpot Academy</a></h4>
+                                        <div class="mh-eduyear">2023</div>
+                                        <p>Completed a comprehensive SEO Certification course from HubSpot Academy, covering key aspects of search engine optimization including keyword research, on-page SEO, link building, and SEO strategy. This certification equipped me with the skills to optimize websites for better search engine ranking and drive organic traffic.</p>
+                                    </div>
+                                    <div class="mh-education-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
+                                        <h4>Content Writing Certification <a href="#">Udemy</a></h4>
+                                        <div class="mh-eduyear">2023</div>
+                                        <p>Completed a Content Writing Certification course from Udemy, gaining expertise in crafting engaging and SEO-friendly content. The course covered various writing styles, content strategy, audience targeting, and the essentials of digital content creation, preparing me to produce high-quality content across different platforms.</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -391,7 +401,7 @@
                                         <h4>Computer Science Lecturer <a href="#">Intel College</a></h4>
                                         <div class="mh-eduyear">2019-2023</div>
                                         <p>At Intel College, I taught Higher National Diploma students in Computer Science, guiding them through a curriculum aligned with the University of Sunderland's standards. I played a pivotal role in preparing students for careers in technology by fostering a collaborative learning environment and ensuring they gained practical experience alongside theoretical knowledge.</p>
-                                        <span>Responsibility :</span>
+                                        <span><b>Responsibility:</b></span>
                                         <ul class="work-responsibility">
                                             <li><i class="fa fa-circle"></i>Delivered lectures on core Computer Science subjects such as programming, Cloud Computing, and database management.</li>
                                             <li><i class="fa fa-circle"></i>Developed and updated course materials to ensure relevance to industry standards.</li>
@@ -402,22 +412,30 @@
                                     </div>                                
                                     <!-- Education Institutes-->
                                     <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
-                                        <h4>Art & Multimedia From <a href="#">Oxford University</a></h4>
-                                        <div class="mh-eduyear">2005-2008</div>
-                                        <span>Responsibility :</span>
+                                        <h4>Digital Skills Trainer <a href="#">Ajira Digital</a></h4>
+                                        <div class="mh-eduyear">2023 - Present</div>
+                                        <p>At Ajira Digital, I train and mentor young individuals, equipping them with essential digital skills to thrive in the modern workforce. My mentorship covers a broad range of topics, including Programming, Application Development, Search Engine Optimization (SEO), Digital Marketing, Data Analysis, among others. My role focuses on empowering the next generation of digital professionals through hands-on training and practical guidance.</p>
+                                        <span><b>Responsibility:</b></span>
                                         <ul class="work-responsibility">
-                                            <li><i class="fa fa-circle"></i>Validate CSS</li>
-                                            <li><i class="fa fa-circle"></i>Project Management</li>
+                                            <li><i class="fa fa-circle"></i>Conduct training sessions on various digital skills, including programming languages, SEO, and data analysis tools.</li>
+                                            <li><i class="fa fa-circle"></i>Mentor participants on best practices in application development and digital content creation.</li>
+                                            <li><i class="fa fa-circle"></i>Assist mentees in creating online work profiles and leveraging digital platforms for freelancing opportunities.</li>
+                                            <li><i class="fa fa-circle"></i>Provide ongoing support and guidance to ensure participants' successful entry into the digital economy.</li>
+                                            <li><i class="fa fa-circle"></i>Facilitate workshops and webinars to enhance the practical skills of trainees in real-world scenarios.</li>
                                         </ul>
                                     </div>                                
                                     <!-- Education Institutes-->
                                     <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
-                                        <h4>Art & Multimedia From <a href="#">Oxford University</a></h4>
-                                        <div class="mh-eduyear">2005-2008</div>
-                                        <span>Responsibility :</span>
+                                        <h4>Founder <a href="#">AstroSavannah</a></h4>
+                                        <div class="mh-eduyear">2024 - 2024</div>
+                                        <p>I founded AstroSavannah, a tech company dedicated to providing cutting-edge software solutions, conducting research, performing data analysis, and fostering innovation in the digital space. The company is driven by a vision to create impactful and trusted technology that addresses modern challenges and pushes the boundaries of digital innovation.</p>
+                                        <span><b>Responsibility:</b></span>
                                         <ul class="work-responsibility">
-                                            <li><i class="fa fa-circle"></i>Validate CSS</li>
-                                            <li><i class="fa fa-circle"></i>Project Management</li>
+                                            <li><i class="fa fa-circle"></i>Lead the development and implementation of software solutions tailored to client needs.</li>
+                                            <li><i class="fa fa-circle"></i>Oversee research projects and data analysis initiatives that drive innovation and inform strategic decisions.</li>
+                                            <li><i class="fa fa-circle"></i>Innovate and invent new technologies that enhance digital experiences and solve complex problems.</li>
+                                            <li><i class="fa fa-circle"></i>Manage a team of professionals, ensuring projects are delivered on time and meet quality standards.</li>
+                                            <li><i class="fa fa-circle"></i>Foster partnerships and collaborations to expand the company’s reach and influence in the tech industry.</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -443,21 +461,21 @@
                         <div class="portfolio-nav col-sm-12" id="filter-button">
                             <ul>
                                 <li data-filter="*" class="current wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s"> <span>All Categories</span></li>
-                                <li data-filter=".user-interface" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"><span>Web Design</span></li>
-                                <li data-filter=".branding" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s"><span>Branding</span></li>
-                                <li data-filter=".mockup" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><span>Mockups</span></li>
-                                <li data-filter=".ui" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s"><span>Photography</span></li>
+                                <li data-filter=".user-interface" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"><span>Software Engineering</span></li>
+                                <li data-filter=".branding" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s"><span>Data Science & Analysis</span></li>
+                                <li data-filter=".mockup" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><span>SEO & Content Writing</span></li>
+                                <li data-filter=".ui" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s"><span>Graphic Design & Branding</span></li>
                             </ul>
                         </div>
                         <div class="mh-project-gallery col-sm-12 wow fadeInUp" id="project-gallery" data-wow-duration="0.8s" data-wow-delay="0.5s">
                             <div class="portfolioContainer row">
                                 <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface">
                                     <figure>
-                                        <img src="assets/images/portfolio/g1.jpg" alt="img04">
+                                        <img src="assets/images/portfolio/U" alt="Web Design">
                                         <figcaption class="fig-caption">
                                             <i class="fa fa-search"></i>
-                                            <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
+                                            <h5 class="title">E-commerce Website</h5>
+                                            <span class="sub-title">Portfolio</span>
                                             <a data-fancybox data-src="#mh"></a>
                                         </figcaption>
                                     </figure>
