--- a/blog-single.html
+++ b/blog-single.html
@@ -2,7 +2,7 @@
 <html lang="en">
     
 <head>
-        <title>Maha - Personal CV/Resume Template | Blog </title>
+        <title>Evance - Personal Portfolio </title>
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="description" content="app landing page template" />
@@ -203,8 +203,8 @@
                                     <div class="single-comment media">
                                         <img src="assets/images/b-author.jpg" alt="" class="img-fluid round-image"> 
                                         <div class="col-md-10 col-sm-10 comment-details media-body">
-                                            <h4> Jhone doe </h4>
-                                            <span>Feb 29, 2015</span>
+                                            <h4> John doe </h4>
+                                            <span>Feb 29, 2023</span>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
                                             et dolore magna aliqua. consectetur adipiscing elit.</p>
                                         </div>
@@ -213,9 +213,9 @@
                                     <div class="single-comment media col-sm-10 pull-right">
                                         <img src="assets/images/b-author.jpg" alt="" class="img-fluid round-image"> 
                                         <div class="col-md-10 col-sm-10 comment-details media-body">
-                                            <h4> Hasin Bari </h4>
-                                            <span>Feb 29, 2015</span>
-                                            <p>Thank You ! I Love it </p>
+                                            <h4> Salna </h4>
+                                            <span>Feb 29, 2023</span>
+                                            <p>Thank You! </p>
                                         </div>
                                     </div>
                                 </div>
@@ -263,8 +263,8 @@
                                         <img src="assets/images/b-author.jpg" alt="" class="img-fluid">
                                     </div>
                                 </div>
-                                <h2>Alex Smith</h2>
-                                <h4>Product Designer</h4>
+                                <h2>Evance</h2>
+                                <h4>Developer</h4>
                                 <p>
                                     Lorem ipsum dolor sit amet, 
                                     consectetur adipisicing elit 
@@ -291,7 +291,7 @@
                             <div class="sidebar-item mh-blog-category">
                                 <h3>Archive</h3>
                                 <ul>
-                                    <li><a href="#">2018 (10)</a></li>
+                                    <li><a href="#">2023 (10)</a></li>
                                     <li><a href="#">Techonology (8)</a></li>
                                     <li><a href="#">Food (6)</a></li>
                                     <li><a href="#">Travel (8)</a></li>
@@ -359,8 +359,8 @@
                                             <div class="each-info media-body">
                                                 <h4>Address</h4>
                                                 <address>
-                                                    5th Avenue, 34th floor, <br> 
-                                                     New york
+                                                    12, Riverside, Westlands <br> 
+                                                     Nairobi
                                                 </address>
                                             </div>
                                         </div>
@@ -372,8 +372,8 @@
                                             </div>
                                             <div class="each-info media-body">
                                                 <h4>Email</h4>
-                                                <a href="mailto:yourmail@email.com">yourmail@email.com</a><br>
-                                                <a href="mailto:yourmail@email.com">yourmail@email.com</a>
+                                                <a href="mailto:yourmail@email.com">evanceodhiambo@protonmail.com</a><br>
+                                                <a href="mailto:yourmail@email.com">evanceodhiambo@protonmail.com</a>
                                             </div>
                                         </div>
                                     </div>
@@ -384,8 +384,8 @@
                                             </div>
                                             <div class="each-info media-body">
                                                 <h4>Phone</h4>
-                                                <a href="callto:(880)-8976-987">(880)-8976-987</a><br>
-                                                <a href="callto:(880)-8976-987">(880)-8976-987</a>
+                                                <a href="callto:(880)-8976-987">254 705 145 489</a><br>
+                                                <a href="callto:(880)-8976-987">254 705 145 489</a>
                                             </div>
                                         </div>
                                     </div>
@@ -419,7 +419,7 @@
                                 </div>
                                 <div class="col-sm-12">
                                 <div class="mh-copyright text-center">
-                                    <p><a href="templateshub.net">Templates Hub</a></p>
+                                    <p></p>
                                 </div>
                             </div>
                             </div>
